--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+logging.file.path=logs
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://db/MightyBlockGram
+spring.datasource.username=nacho
+spring.datasource.password=nacho
