--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   db:
     container_name: db
+    platform: linux/x86_64
     image: mysql:8
     restart: always
     ports:
