--- a/db-variables.env
+++ b/db-variables.env
@@ -1,4 +1,4 @@
-MYSQL_DATABASE:MightyBlockGram
-MYSQL_USER:root
-MYSQL_PASSWORD:root
-MYSQL_ROOT_PASSWORD:root
+MYSQL_DATABASE=MightyBlockGram
+MYSQL_USER=root
+MYSQL_PASSWORD=root
+MYSQL_ROOT_PASSWORD=root
